--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -24,7 +24,7 @@
         Go Bún<br>
         Nom / Prénom : [À compléter]<br>
         Statut : Auto-entrepreneur / Micro-entreprise<br>
-        Email : contact@votredomaine.fr
+        Email : contact@gobunreims.com
       </p>
 
       <h2>Hébergement</h2>
