--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         "price": "7.5",
         "priceCurrency": "EUR",
         "availability": "https://schema.org/InStock",
-        "url": "https://gumroad.com/l/TON_PRODUIT_7"
+        "url": "https://laetitiagobun.gumroad.com/l/miam?price=7.5"
       },
       {
         "@type": "Offer",
@@ -57,7 +57,7 @@
         "price": "12.5",
         "priceCurrency": "EUR",
         "availability": "https://schema.org/InStock",
-        "url": "https://gumroad.com/l/TON_PRODUIT_12"
+        "url": "https://laetitiagobun.gumroad.com/l/miam?price=12.5"
       },
       {
         "@type": "Offer",
@@ -65,7 +65,7 @@
         "price": "25",
         "priceCurrency": "EUR",
         "availability": "https://schema.org/InStock",
-        "url": "https://gumroad.com/l/TON_PRODUIT_25"
+        "url": "https://laetitiagobun.gumroad.com/l/miam?price=25"
       }
     ]
   }
