--- a/index.html
+++ b/index.html
@@ -177,21 +177,21 @@
             <div class="price-card__price">7.5 €</div>
             <p class="price-card__description">Pour celles et ceux qui ont peu de moyens mais souhaitent découvrir ces recettes.</p>
             <!-- Remplacer le lien ci dessous par le produit à 7.5€ -->
-            <a class="btn btn--dark" href="https://gumroad.com/l/TON_PRODUIT_7" target="_blank" rel="noopener">Choisir – 7,5 €</a>
+            <a class="btn btn--dark" href="https://laetitiagobun.gumroad.com/l/miam?price=7.5" target="_blank" rel="noopener">Choisir – 7,5 €</a>
           </article>
           <article class="price-card">
             <h3 class="price-card__title">Prix équilibre</h3>
             <div class="price-card__price">12.5 €</div>
             <p class="price-card__description">L'équivalent d'un plat, pour 10 recettes à refaire chez soi.</p>
             <!-- Remplacer le lien ci dessous par le produit à 12.5€ -->
-            <a class="btn btn--dark" href="https://gumroad.com/l/TON_PRODUIT_12" target="_blank" rel="noopener">Choisir – 12,5 €</a>
+            <a class="btn btn--dark" href="https://laetitiagobun.gumroad.com/l/miam?price=12.5" target="_blank" rel="noopener">Choisir – 12,5 €</a>
           </article>
           <article class="price-card">
             <h3 class="price-card__title">Prix soutien</h3>
             <div class="price-card__price">25 €</div>
             <p class="price-card__description">Pour soutenir le projet et permettre le développement de futurs contenus.</p>
             <!-- Remplacer le lien ci dessous par le produit à 25€ -->
-            <a class="btn btn--dark" href="https://gumroad.com/l/TON_PRODUIT_25" target="_blank" rel="noopener">Choisir – 25 €</a>
+            <a class="btn btn--dark" href="https://laetitiagobun.gumroad.com/l/miam?price=25" target="_blank" rel="noopener">Choisir – 25 €</a>
           </article>
         </div>
         <p class="pricing__note">Le lien de téléchargement du PDF est envoyé automatiquement par email après le paiement.</p>
