--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <a class="btn btn--dark" href="https://laetitiagobun.gumroad.com/l/miam?price=25" target="_blank" rel="noopener">Choisir – 25 € HT</a>
           </article>
         </div>
-        <p class="pricing__note">TVA gerée par Gumroad. Le lien de téléchargement du PDF est envoyé automatiquement par email après le paiement.</p>
+        <p class="pricing__note">TVA (20%) gerée par Gumroad. Le lien de téléchargement du PDF est envoyé automatiquement par email après le paiement.</p>
       </div>
     </section>
   </main>
@@ -205,7 +205,7 @@
         <div class="footer__section">
           <h3 class="footer__title">Contact</h3>
           <!-- remplacer le lien du mail -->
-          <p><a href="mailto:contact@tondomaine.fr" class="footer__link">contact@votredomaine.fr</a></p>
+          <p><a href="mailto:contact@gobunreims.com" class="footer__link">contact@gobunreims.com</a></p>
         </div>
         <div class="footer__section">
           <h3 class="footer__title">Mentions</h3>
