--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -45,8 +45,7 @@
       <h2>Vos droits</h2>
       <p>
         Conformément au RGPD, vous pouvez demander l’accès, la modification ou la suppression
-        de vos données directement auprès de Gumroad ou en contactant :
-        contact@votredomaine.fr
+        de vos données directement auprès de Gumroad.
       </p>
 
       <h2>Sécurité</h2>
