--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -22,7 +22,7 @@
       <h2>Éditeur du site</h2>
       <p>
         Go Bún<br>
-        Nom / Prénom : [À compléter]<br>
+        Nom / Prénom : IUNG Laëtitia Minh Anh<br>
         Statut : Auto-entrepreneur / Micro-entreprise<br>
         Email : contact@gobunreims.com
       </p>
