--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Des recettes vietnamiennes simples, pensées pour être refaites chez soi.">
   <!-- changer les liens ici selon votre domaine -->
   <meta property="og:image" content="https://votredomaine.fr/assets/cover.jpg">
-  <meta property="og:url" content="https://votredomaine.fr/">
+  <meta property="og:url" content="https://gobunreims.fr/">
   <meta property="og:locale" content="fr_FR">
 
   <meta name="twitter:card" content="summary_large_image">
