--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="twitter:description" content="10 recettes vietnamiennes simples, à cuisiner chez vous. Ebook instantané.">
   <meta name="twitter:image" content="https://votredomaine.fr/assets/cover.jpg">
 
-  <link rel="canonical" href="https://votredomaine.fr/">
+  <link rel="canonical" href="https://gobunreims.fr/">
 
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
